Change package naming

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "de.g00fy.versioncompare"
+        applicationId "com.g00fy2.versioncomparesample"
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
