--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 }
 
 dependencies {
-    implementation project(':library')
+    implementation project(':versioncompare')
 
     implementation 'com.android.support:appcompat-v7:27.0.2'
 }
