--- a/versioncompare/deploy.gradle
+++ b/versioncompare/deploy.gradle
@@ -4,7 +4,7 @@ ext {
 
   publishedGroupId = 'com.g00fy2'
   libraryName = 'versioncompare'
-  artifact = 'library'
+  artifact = 'versioncompare'
 
   libraryDescription = 'Lightweight library to compare version strings.'
 
@@ -74,7 +74,17 @@ task sourcesJar(type: Jar) {
   classifier = 'sources'
 }
 
+task javadoc(type: Javadoc) {
+  source = android.sourceSets.main.java.srcDirs
+  classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
 artifacts {
+  archives javadocJar
   archives sourcesJar
 }
 
