Add Nullable and NotNull annotations, remove unnecessary null checks, refactoring

--- a/versioncompare/build.gradle
+++ b/versioncompare/build.gradle
@@ -1,18 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 27
+    compileSdkVersion 27
+    defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 27
+        versionCode 1
+        versionName "1.0"
+    }
+}
 
-  defaultConfig {
-    minSdkVersion 14
-    targetSdkVersion 27
-    versionCode 1
-    versionName "1.0"
-  }
+dependencies {
+    compileOnly 'org.jetbrains:annotations:15.0' // only required at compile time
 
-  dependencies {
     testImplementation 'junit:junit:4.12'
-  }
 }
 
 apply from: 'deploy.gradle'
