--- a/versioncompare/build.gradle
+++ b/versioncompare/build.gradle
@@ -11,7 +11,7 @@ android {
 }
 
 dependencies {
-    compileOnly 'org.jetbrains:annotations:15.0' // only required at compile time
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2' // only required at compile time
 
     testImplementation 'junit:junit:4.12'
 }
