--- a/versioncompare/build.gradle
+++ b/versioncompare/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         minSdkVersion 14
-        consumerProguardFiles 'proguard-rules.txt'
+        consumerProguardFiles 'proguard-rules.pro'
     }
 }
 
