Update sample app support library and enable resources shrinking

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,6 +13,7 @@ android {
     }
     buildTypes {
         release {
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -26,7 +27,7 @@ dependencies {
     implementation project(':versioncompare')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
 
 buildscript {
