Fix missing publishing artifacts

--- a/versioncompare/deploy.gradle
+++ b/versioncompare/deploy.gradle
@@ -35,6 +35,11 @@ task javadocJar(type: Jar) {
     from javadoc.destinationDir
 }
 
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
