--- a/versioncompare/build.gradle
+++ b/versioncompare/build.gradle
@@ -8,6 +8,11 @@ dependencies {
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.4.3'
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 jacoco {
     toolVersion = '0.8.5'
 }
