--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.g00fy2.versioncomparesample">
+    package="io.github.g00fy2.versioncomparesample">
 
   <application
       android:icon="@mipmap/ic_launcher"
       android:label="Version Compare"
       android:theme="@style/AppTheme">
     <activity
-        android:name="com.g00fy2.versioncomparesample.MainActivity"
+        android:name="io.github.g00fy2.versioncomparesample.MainActivity"
         android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
