--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="io.github.g00fy2.versioncomparesample">
 
   <application
       android:icon="@mipmap/ic_launcher"
       android:label="Version Compare"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:allowBackup="false">
     <activity
         android:name="io.github.g00fy2.versioncomparesample.MainActivity"
-        android:screenOrientation="portrait">
+        android:exported="true"
+        android:screenOrientation="portrait"
+        tools:ignore="LockedOrientationActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
